Fix photo grid three on small and medium screens

--- a/_assets/stylesheets/_components/_images.scss
+++ b/_assets/stylesheets/_components/_images.scss
@@ -122,10 +122,10 @@ figcaption {
 }
 
 .photo-grid--three {
-  grid-template-columns: 2fr 2fr 3fr;
-  grid-template-rows: 200px 180px auto;
+  grid-template-columns: 200px 1fr 2fr;
+  grid-template-rows: 200px 350px auto;
   @media #{$large-up} {
-    grid-template-columns: .5fr 2fr 3fr 3fr;
+    grid-template-columns: 40px 250px 1fr 1fr;
     grid-template-rows: 380px 250px 130px;
 
     figcaption {
@@ -147,14 +147,14 @@ figcaption {
   }
 
   > :nth-child(2) {
-    grid-column: 1 / span 1;
+    grid-column: span 1;
     @media #{$large-up} {
       grid-column: 2 / span 1;
     }
   }
 
   > :nth-child(3) {
-    grid-column: 2 / span 2;
+    grid-column: span 3;
     @media #{$large-up} {
       grid-column: 3 / span 2;
       grid-row: span 2;
